# Vectorize

./: README.md  Vectorize.ipynb  pyproject.toml
